# jumprope_ecommerce

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  init_db.py  pyproject.toml  setup.cfg
app/: config.py  dependencies.py  exceptions.py  main.py  tags.py
app/admin/: __init__.py  admin.py  views.py
app/db/: crud.py  database.py  init_db.py  models.py  schemas.py
app/routers/: orders.py  products.py
app/scripts/: entrypoint.sh
tests/db/: conftest.py  test_crud.py
tests/routers/: conftest.py  test_routers.py
